double scroll bar fix

--- a/src/css/SideGenerator.css
+++ b/src/css/SideGenerator.css
@@ -41,7 +41,6 @@
 
 .side-gen {
     width: 100%;
-    overflow: scroll;
     padding-bottom: 8rem;
     margin-bottom: 2rem;
 }
